[metadata]
name = rustylib
version = 1.7.4
author = ZeyaTsu
description = A useful python library for everything.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ZeyaTsu/rustylib
project_urls =
    Bug Tracker = https://github.com/ZeyaTsu/rustylib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
